--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -6,7 +6,10 @@
   <title>URL - TinyApp Example</title>
 </head>
 
+<%- include('./partials/_header'); %>
+
 <body>
+
   <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
