Add link to the shortURL

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -28,13 +28,12 @@
       <tbody>
         <% for(let url in urls) { %>
           <tr>
-            <td><%= url %></td>
+            <td><a href='#'><%= url %></a></td>
             <td><%= urls[url] %></td>
           </tr>
         <% } %>
       </tbody>
     </table>
-    <h6 rel="#" href="#"> Link for shortening a new URL </h6>
 
 
   </main>
