--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -22,6 +22,7 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col">Delete</th>
         </tr>
       </thead>
      
@@ -30,10 +31,20 @@
           <tr>
             <td><a href='#'><%= url %></a></td>
             <td><%= urls[url] %></td>
+            <td>
+                <form method="POST" action="/urls/<%= url %>/delete">
+                  <input class="btn btn-outline-danger" type="submit" value="Delete">
+              </form>
+            </td>
           </tr>
         <% } %>
       </tbody>
     </table>
+
+
+
+    
+
 
 
   </main>
