--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -22,6 +22,7 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col">Edit</th>
           <th scope="col">Delete</th>
         </tr>
       </thead>
@@ -32,9 +33,14 @@
             <td><a href='#'><%= url %></a></td>
             <td><%= urls[url] %></td>
             <td>
+                <form method="GET" action="/urls/<%= url %>">
+                  <input class="btn btn-outline-primary" type="submit" value="Edit">
+                </form>
+            </td>
+            <td>
                 <form method="POST" action="/urls/<%= url %>/delete">
                   <input class="btn btn-outline-danger" type="submit" value="Delete">
-              </form>
+                </form>
             </td>
           </tr>
         <% } %>
