--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-md navbar-dark bg-success">
+  <nav class="navbar navbar-expand-md navbar-dark bg-success justify-content-between">
     <a class="navbar-brand" href="/urls">TinyApp</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -8,7 +8,21 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        
+          <% if (username) { %>
+            <form class="form-inline d-flex justify-content-end" method="POST" action="/logout">
+            <span class = "ml-sm-5 mr-sm-2" style="font-weight: normal;">Logged in as: &nbsp;<%= username %></span>
+            <input class="btn btn-outline-secondary my-2 my-sm-0" type="submit" value="Log out">
+          </form> 
+          <% } else { %>
+          <form class="form-inline justify-content-end" method="POST" action="/login">
+          <input class="form-control ml-sm-5 mr-sm-2" type="text" name="username" placeholder="Username">
+          <input class="btn btn-outline-secondary my-2 my-sm-0" type="submit" value="Login">
+        </form> 
+        <% } %>
       </div>
     </div>
   </nav>
 </header>
+
+
