--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -9,15 +9,14 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
         
-          <% if (username) { %>
+          <% if (user) { %>
             <form class="form-inline d-flex justify-content-end" method="POST" action="/logout">
-            <span class = "ml-sm-5 mr-sm-2" style="font-weight: normal;">Logged in as: &nbsp;<%= username %></span>
+            <span class = "ml-sm-5 mr-sm-2" style="font-weight: normal;">Logged in as: &nbsp;<%= user.email %></span>
             <input class="btn btn-outline-secondary my-2 my-sm-0" type="submit" value="Log out">
           </form> 
           <% } else { %>
-          <form class="form-inline justify-content-end" method="POST" action="/login">
-          <input class="form-control ml-sm-5 mr-sm-2" type="text" name="username" placeholder="Username">
-          <input class="btn btn-outline-secondary my-2 my-sm-0" type="submit" value="Login">
+            <a class="nav-item nav-link" href="/login">Login</a>
+            <a class="nav-item nav-link" href="/register">Register</a>
         </form> 
         <% } %>
       </div>
