--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -31,7 +31,7 @@
         <% for(let url in urls) { %>
           <tr>
             <td><a href='#'><%= url %></a></td>
-            <td><%= urls[url] %></td>
+            <td><%= urls[url].longURL %></td>
             <td>
                 <form method="GET" action="/urls/<%= url %>">
                   <input class="btn btn-outline-primary" type="submit" value="Edit">
