--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -20,7 +20,7 @@
     <div class="pure-control-group">
       <form class="pure-form pure-form-aligned" action="/register" method="POST" style="margin: 20px 0;">
         <label for="email">Email address</label>
-        <p><input id="email" type="email" name="username" placeholder="Enter email" style="width: 200px"></p>
+        <p><input id="email" type="email" name="email" placeholder="Enter email" style="width: 200px"></p>
         <label for="password">Password</label>
         <p><input class="form-control" id="password" type="password" name="password" placeholder="Password" style="width: 200px"></p>
         <p><input class="btn btn-primary" type="submit" value="Register"></p>
