--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -30,7 +30,7 @@
       <tbody>
         <% for(let url in urls) { %>
           <tr>
-            <td><a href='#'><%= url %></a></td>
+            <td><a href='<%= urls[url].longURL %>'><%= url %></a></td>
             <td><%= urls[url].longURL %></td>
             <td>
                 <form method="GET" action="/urls/<%= url %>">
